syntax="proto3";
package messages;
option java_package = "com.xxicon.game.message";

message Header {
  sint32 id = 1 ;
  bytes data = 2 ;
  int32 seq = 3 ;
  int32 msgType = 4 ;
}

message C0101_EchoReqMessage {
  string content = 1;
}

message C0101_EchoRespMessage {
  string session = 1;
  string content = 2;
}
